[project]
name = "python-uv-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nitric ==1.2.3",
    "betterproto ==2.0.0b6",
    "huggingface-hub>=0.30.2",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
